[tool.poetry]
name = "graphaid"
version = "0.1.0"
description = ""
authors = ["Yegor <egorhs19@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
requests = "^2.26.0"
selenium = "^4.0.0"
pandas = "^1.3.4"
networkx = "^2.6.3"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
pyvis = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
